<resources>
    <string name="app_name">TableLayout</string>

    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>

    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>

    <string name="btn_restar">-</string>
    <string name="btn_multiplicar">*</string>
    <string name="btn_dividir">/</string>
    <string name="btn_sumar">+</string>
    <string name="btn_resultado">=</string>

    <string name="btn_restaurarValores">RESETEAR VALORES</string>
    <string name="Pantalla_Calculadora">0</string>

</resources>